added previous editions section

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Meta seo -->
-    <meta name="keywords" content="your, tags"/>
+    <meta name="keywords" content="conference, iot, blockchain, timisoara, IT, event, october, 2018"/>
     <meta name="description" content="Conference on IoT eHealth Blockchain and more happening in Timisoara on 15-16 October 2018"/>
     <meta name="subject" content="Hacktalks 2018 conference official website">
     <meta name="robots" content="index,follow" />
     <meta name="google-site-verification" content="a8eHtYxHXmK9qd_8MlhGYP9elKBJ7TBH1QYdkDrL9DM" />
     <meta name="msvalidate.01" content="5B12513B8ED560E7F4FE84A74F539860" />
-    
+
     <!-- open graph -->
     <meta property="og:title" content="Hacktalks 2018"/>
     <meta property="og:type" content="website"/>
@@ -25,7 +25,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/hacktalks.css">
+    <link rel="stylesheet" href="assets/css/hacktalks.css?ver=1.0.3">
     <title>Hacktalks 2018 Conference - IoT, eHealth, Blockchain & more</title>
 </head>
 <body>
@@ -64,6 +64,20 @@
             </div>
         </form>
         </div>
+    </div>
+    <div class="row">
+        <div class="col previous-editions text-center">
+        <p>Previous editions</p>
+        <ul>
+            <li>
+                <a href="http://2016.hacktm.ro/modules/cms/img/hacktalks.png" target="_blank">2016</a>
+            </li>
+            <li>
+                <a href="https://2017.hacktm.ro/hacktalks" target="_blank">2017</a>
+            </li>
+            </ul>
+        </div>
+
     </div>
 </section>
 
