Added register as speaker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/hacktalks.css?ver=1.0.3">
+    <link rel="stylesheet" href="assets/css/hacktalks.css?ver=1.0.7">
     <title>Hacktalks 2018 Conference - IoT, eHealth, Blockchain & more</title>
 </head>
 <body>
@@ -46,6 +46,15 @@
     <div class="row">
         <div class="col date">15-16 - Oct.2018</div>
     </div>
+
+    <div class="row register">
+        <div class="col col-12 text-center mt-5 mb-2">
+            <button class="btn button-green" data-toggle="collapse" data-target="#applyToSpeak" aria-expanded="true" aria-controls="applyToSpeak">Apply to speak</button>
+            </div>
+        <div id="applyToSpeak" class="col col-12 collapse">
+            <script type="text/javascript" defer src="https://www.123formbuilder.com/embed/4252673.js" data-role="form" data-default-width="650px"></script>
+        </div>
+    </div>
     <div class="row subscribe-form">
         <div class="col">
         <form action="https://banatit.us11.list-manage.com/subscribe/post?u=b0ca77226362a7371c265896d&amp;id=4f6d7fa540" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -53,7 +62,7 @@
             <div class="col">
                 <label for="mce-EMAIL" class="subscribe-msg">Subscribe to get updates</label>
 
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Email" required>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter email" required>
 
                 <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button subscribe">
             </div>
