--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   <div class="speech">
                     <h3>App Security from zero to hackers</h3>
                     <div class="details"><!-- data-toggle="modal" data-target="#monicaiovan">-->
-                      <div class="avatar" style="background-image: url('./assets/speakers/2019/marco_plus_one.png')"></div>
+                      <div class="avatar" style="background-image: url('./assets/speakers/2019/monica_iovan.png')"></div>
                       <div class="info">
     
                         <div class="name">Monica Iovan</div>
@@ -177,7 +177,7 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          <div class="avatar" style="background-image: url('./assets/speakers/2019/marco_plus_one.png')"></div>
+                          <div class="avatar" style="background-image: url('./assets/speakers/2019/monica_iovan.png')"></div>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                           nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -350,21 +350,21 @@
                   </div>
                   <div class="speech">
                     <h3>The future of web with Elixir & Elm</h3>
-                    <div class="details" data-toggle="modal" data-target="#cezarhalmagean">
+                    <div class="details" data-toggle="modal" data-target="#cezarhălmăgean">
                       <div class="avatar" style="background-image: url('./assets/speakers/2019/cezar_halmagean.jpg')"></div>
                       <div class="info">
     
-                        <div class="name">Cezar Halmagean</div>
+                        <div class="name">Cezar Hălmăgean</div>
                         <div class="title">Software Consultant</div>
                       </div>
                     </div>
                   </div>
                   <!-- Modal -->
-                  <div class="modal fade" id="cezarhalmagean" tabindex="-1" role="dialog" aria-labelledby="cezarhalmagean" aria-hidden="true">
+                  <div class="modal fade" id="cezarhălmăgean" tabindex="-1" role="dialog" aria-labelledby="cezarhălmăgean" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" >Cezar Halmagean - The future of web with Elixir & Elmt</h5>
+                          <h5 class="modal-title" >Cezar Hălmăgean - The future of web with Elixir & Elmt</h5>
                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                           </button>
@@ -607,6 +607,26 @@
       <li>
         <a title="Visma" target="_blank" href="https://www.visma.ro/">
           <img width="175" height="175" src="assets/logo/hacktalks_logo_visma.png" alt="Visma">
+        </a>
+      </li>
+      <li>
+        <a title="Nagarro" target="_blank" href="https://www.nagarro.com/">
+          <img width="175" height="175" src="assets/logo/hacktalks_logo_nagarro.png" alt="Nagarro">
+        </a>
+      </li>
+      <li>
+        <a title="Sustainalytics" target="_blank" href="https://www.sustainalytics.com/">
+          <img width="175" height="175" src="assets/logo/hacktalks_logo_sustainalytics.png" alt="Sustainalytics">
+        </a>
+      </li>
+      <li>
+        <a title="3pillarglobal" target="_blank" href="https://www.3pillarglobal.com/">
+          <img width="175" height="175" src="assets/logo/hacktalks_logo_3pg.png" alt="3pillarglobal">
+        </a>
+      </li>
+      <li>
+        <a title="DevPlant" target="_blank" href="https://devplant.ro/">
+          <img width="175" height="175" src="assets/logo/hacktalks_logo_devplant.png" alt="DevPlant">
         </a>
       </li>
 
