Nagarro speakers photo updated

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   <div class="speech">
                     <h3>How did 3 backend developers choose React</h3>
                     <div class="details"><!-- data-toggle="modal" data-target="#bogdandejan">-->
-                      <div class="avatar" style="background-image: url('./assets/speakers/2019/bogdan_dejan.jpg')"></div>
+                      <div class="avatar" style="background-image: url('./assets/speakers/2019/bogdan_dejan.png')"></div>
                       <div class="info">
     
                         <div class="name">Bogdan Hotea, Dejan Nichsici</div>
@@ -273,7 +273,7 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          <div class="avatar" style="background-image: url('./assets/speakers/2019/bogdan_dejan.jpg')"></div>
+                          <div class="avatar" style="background-image: url('./assets/speakers/2019/bogdan_dejan.png')"></div>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                           nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -760,7 +760,7 @@
             disableDoubleClickZoom: true
         });
 
-        var image = https://hacktalks.ro/assets/logo/hacktalkspin.png';
+        var image = 'https://hacktalks.ro/assets/logo/hacktalkspin.png';
         var marker = new google.maps.Marker({
             position: craft,
             map: map,
