--- a/index.html
+++ b/index.html
@@ -692,7 +692,11 @@
         <img width="175" height="175" src="assets/logo/hacktalks_logo_devplant.png" alt="DevPlant">
       </a>
     </li>
-      
+    <li>
+      <a title="Lingo24" target="_blank" href="https://www.lingo24.com/">
+        <img width="175" height="175" src="assets/logo/hacktalks_logo_lingo24.png" alt="Lingo24">
+      </a>
+    </li>
 
     </ul>
         <h2>BROUGHT TO YOU BY</h2>
