Cezar Hălmăgean section updated

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     14:00 <!--i class="aud"></i>-->
                   </div>
                   <div class="speech">
-                    <h3>The future of web with Elixir & Elm</h3>
+                    <h3>The future of web development with Elixir & Elm</h3>
                     <div class="details" data-toggle="modal" data-target="#cezarhălmăgean">
                       <div class="avatar" style="background-image: url('./assets/speakers/2019/cezar_halmagean.jpg')"></div>
                       <div class="info">
@@ -420,7 +420,7 @@
                     <div class="modal-dialog modal-dialog-centered" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" >Cezar Hălmăgean - The future of web with Elixir & Elmt</h5>
+                          <h5 class="modal-title" >Cezar Hălmăgean - The future of web development with Elixir & Elmt</h5>
                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                           </button>
