Monica Iovan section updated

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   </div>
                   <div class="speech">
                     <h3>App Security from zero to hackers</h3>
-                    <div class="details"><!-- data-toggle="modal" data-target="#monicaiovan">-->
+                    <div class="details" data-toggle="modal" data-target="#monicaiovan">
                       <div class="avatar" style="background-image: url('./assets/speakers/2019/monica_iovan.png')"></div>
                       <div class="info">
     
@@ -234,12 +234,12 @@
                         </div>
                         <div class="modal-body">
                           <div class="avatar" style="background-image: url('./assets/speakers/2019/monica_iovan.png')"></div>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                          culpa qui officia deserunt mollit anim id est laborum.
+                          Monica Iovan is a domain expert @Visma Software and part of the team since 2013. Her goal is always to listen, create, and deliver to the best of her abilities.
+                          <br/><br/>
+                          Her interest in technology was born in the moment she laid eyes on the first computer and as proof she has 13 years in the IT Business under her belt. Developing code and support were her first passions but, since you can’t keep a curious mind in one place for too long,  her career evolved towards Project manager, Service owner and Change management.
+                          <br/><br/>
+                          In Visma Timisoara she began as a Business Analyst and Test Engineer, that until DevOps and Security caught her eye.  In her free time, she enjoys peaceful moments in nature and the company of a good book.
+                          <br/><br/> 
                         </div>
                       </div>
                     </div>
