--- a/index.html
+++ b/index.html
@@ -697,6 +697,11 @@
         <img width="175" height="175" src="assets/logo/hacktalks_logo_lingo24.png" alt="Lingo24">
       </a>
     </li>
+    <li>
+      <a title="Azets" target="_blank" href="https://www.azets.ro/">
+        <img width="175" height="175" src="assets/logo/hacktalks_logo_azets.png" alt="Azets">
+      </a>
+    </li>
 
     </ul>
         <h2>BROUGHT TO YOU BY</h2>
