Opswat added as Comunity Partner

--- a/index.html
+++ b/index.html
@@ -702,6 +702,11 @@
         <img width="175" height="175" src="assets/logo/hacktalks_logo_azets.png" alt="Azets">
       </a>
     </li>
+    <li>
+      <a title="Opswat" target="_blank" href="https://www.opswat.com/">
+        <img width="175" height="175" src="assets/logo/hacktalks_logo_opswat.png" alt="Azets">
+      </a>
+    </li>
 
     </ul>
         <h2>BROUGHT TO YOU BY</h2>
