--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="https://hacktalks.ro/assets/images/hacktalks-logo.png"/>
     <meta property="og:site_name" content="HackTalks"/>
     <meta property="og:description"
-          content="Tech Conference in Timisoara on 15-16 October 2018"/>
+          content="Tech Conference in Timisoara on the 17th May 2019"/>
 
 
     <!-- Bootstrap CSS -->
