--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     <div class="row register">
         <div class="col col-12 text-center mt-5 mb-2">
-            <a class="btn button-green" target="_blank" href="https://banatit.ro/event/hacktalks-2019/">Register here</a>
+            <a class="btn button-red" href="#">SOLD OUT</a>
         </div>
     </div>
 
