--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <meta property="og:url" content="https://hacktalks.ro"/>
     <meta property="og:image" content="https://hacktalks.ro/assets/images/hacktalks-logo.png"/>
     <meta property="og:site_name" content="HackTalks"/>
-    <meta property="og:description"
-          content="Tech Conference in Timisoara on the 22nd of May 2019"/>
+    <meta property="og:description" content="Tech Conference in Timisoara on the 22nd of May 2020"/>
 
 
     <!-- Bootstrap CSS -->
@@ -33,60 +32,59 @@
     <title>HackTalks Conference</title>
     
     <!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119873806-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-119873806-1');
-</script>
-<script type="text/javascript">
-    var map;
-    function initMap() {
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119873806-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-119873806-1');
+    </script>
+    <script type="text/javascript">
+        var map;
+        function initMap() {
 
-        var congressHall = {lat: 45.7669644, lng: 21.2287188};
-        map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 16,
-            center: congressHall,
-            draggable: false,
-            zoomControl: false,
-            scrollwheel: false,
-            disableDoubleClickZoom: true
-        });
+            var congressHall = {lat: 45.7669644, lng: 21.2287188};
+            map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 16,
+                center: congressHall,
+                draggable: false,
+                zoomControl: false,
+                scrollwheel: false,
+                disableDoubleClickZoom: true
+            });
 
-        var image = 'https://hacktalks.ro/assets/logo/hacktalkspin.png';
-        var marker = new google.maps.Marker({
-            position: congressHall,
-            map: map,
-            title: 'HackTalks 2020',
-            url: 'https://www.google.com/maps/place/Iulius+Congress+Hall/@45.7669644,21.2287188,15z/data=!4m5!3m4!1s0x0:0x488a1aa41747c6e8!8m2!3d45.7669644!4d21.2287188',
-            icon: {
-                url: image,
-                scaledSize: {width: 100, height: 75}
-            },
-        });
+            var image = 'https://hacktalks.ro/assets/logo/hacktalkspin.png';
+            var marker = new google.maps.Marker({
+                position: congressHall,
+                map: map,
+                title: 'HackTalks 2020',
+                url: 'https://www.google.com/maps/place/Iulius+Congress+Hall/@45.7669644,21.2287188,15z/data=!4m5!3m4!1s0x0:0x488a1aa41747c6e8!8m2!3d45.7669644!4d21.2287188',
+                icon: {
+                    url: image,
+                    scaledSize: {width: 100, height: 75}
+                },
+            });
 
-        google.maps.event.addListener(marker, 'click', function() {
-            window.open(this.url,'_blank');
-        });
-    }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwtD15NnMp34yFbzMpnUsh0RfTvhgrkL0&callback=initMap"
-        async defer></script>
+            google.maps.event.addListener(marker, 'click', function() {
+                window.open(this.url,'_blank');
+            });
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwtD15NnMp34yFbzMpnUsh0RfTvhgrkL0&callback=initMap" async defer></script>
 </head>
 <body data-spy="scroll" data-target=".navbar-nav" data-offset="120">
 
