Change event's date to 'October 2, 2020' and add logo

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta property="og:title" content="HackTalks"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://hacktalks.ro"/>
-    <meta property="og:image" content="https://hacktalks.ro/assets/images/hacktalks-logo.png"/>
+    <meta property="og:image" content="https://hacktalks.ro/assets/logo/hacktalks-logo.png"/>
     <meta property="og:site_name" content="HackTalks"/>
-    <meta property="og:description" content="Tech Conference in Timisoara on the 22nd of May 2020"/>
+    <meta property="og:description" content="Tech Conference in Timisoara on October 2, 2020"/>
 
 
     <!-- Bootstrap CSS -->
@@ -124,7 +124,7 @@
         <div class="col heading text-center">Timisoara</div>
     </div>
     <div class="row">
-        <div class="col date">22.05.2020</div>
+        <div class="col date">02.10.2020</div>
     </div>
     <div class="row">
         <div class="col text-center intro">
